@@ -7,4 +7,5 @@ bin.includes = META-INF/,\
                images/,\
                plugin.xml,\
                build-doc.xml,\
-               toc.xml
+               toc.xml,\
+               book.css
