@@ -1,3 +1,8 @@
+2011-06-16  Jeff Johnston  <jjohnstn@redhat.com>
+
+	* build.properties: Add book.css.
+	* book.css: New file.
+
 2011-06-03  Jeff Johnston  <jjohnstn@redhat.com>
 
 	Regenerate from updated wiki-pages.
